# meal-prep-workflow

./: .gitignore  BUILD_PLAN.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/routes/: auth.py  test.py
backend/app/services/agents/: extraction.py  models.py  workflow.py
frontend/: .env.example
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/sign-in/: page.tsx
frontend/src/app/sign-up/: page.tsx
frontend/src/lib/: AuthContext.tsx  auth-errors.ts  firebase.ts
